<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <!-- Added for the weather app -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_settings_activity">Settings</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="true">30328</string>
    <string name="pref_units_key" translatable="true">Metric</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_temperature_key" translatable="false">temperature</string>
    <string name="pref_temperature_label">Pick Your Units</string>
    <string name="pref_temperature_default" translatable="true">Metric</string>
    <string name="pref_key_temperature_settings">pref_temperature</string>
    <string name="pref_key_location_settings">pref_location</string>
    <string name="preferred_location">Map Location</string>
    <string name="action_share">Share</string>



</resources>
